--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,12 @@ dependencies:
   path_provider: ^2.1.2
   path: ^1.9.0
 
+  # For state management/notifiers
+  flutter_riverpod: ^2.5.1
+
+  # For DateFormat
+  intl: ^0.18.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
